# vibe-shuffle

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  test.py
.github/workflow/: workflow.yml
src/vibe_shuffle/: deepseek.py  models_reception.py
vibe_shuffle/: __init__.py
